[REFACTORING] Tests refacto + Delete activity and user needed for tests
